--- a/static/style.css
+++ b/static/style.css
@@ -92,3 +92,18 @@
 .pagination a:hover {
     background-color: #555;
 }
+
+.sidebar {
+    position: sticky;
+    top: 0;
+    height: 100vh;
+    z-index: 1000;
+    padding-top: 20px;
+}
+
+@media (max-width: 767.98px) {
+    .sidebar {
+        height: auto;
+        position: static;
+    }
+}
