--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,7 @@
 }
 
 .card {
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,7 +28,7 @@
 /* Style for the product image */
 .card-img-top {
     width: 100%;
-    height: 250px; /* Fixed height to keep images uniform */
+    height: 200px; /* Fixed height to keep images uniform */
     object-fit: cover; /* Crop the image to fit within the given height */
     border-radius: 4px; /* Slight rounding for framed effect */
     border: 1px solid #ccc;
@@ -107,3 +108,4 @@
         position: static;
     }
 }
+
