--- a/templates/admin/categories.html
+++ b/templates/admin/categories.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Manage Categories</h2>
-<a href="{{ url_for('admin_new_category') }}" class="btn btn-success mb-3">Add New Category</a>
+<h2>Quản lý Phân loại</h2>
+<a href="{{ url_for('admin_new_category') }}" class="btn btn-success mb-3">Thêm phân loại</a>
 <div class="table-responsive">
     <table class="table">
         <thead>
