--- a/templates/admin/category_form.html
+++ b/templates/admin/category_form.html
@@ -4,11 +4,11 @@
 
 <form method="post">
     <div class="form-group">
-        <label for="name">Name</label>
+        <label for="name">Tên</label>
         <input type="text" class="form-control" id="name" name="name" value="{{ category.name if category else '' }}" required>
     </div>
     <div class="form-group">
-        <label for="description">Description</label>
+        <label for="description">Mô tả</label>
         <textarea class="form-control" id="description" name="description" rows="3">{{ category.description if category else '' }}</textarea>
     </div>
     <button type="submit" class="btn btn-primary">{{ 'Update' if category else 'Create' }}</button>
