--- a/templates/admin/edit_products.html
+++ b/templates/admin/edit_products.html
@@ -26,6 +26,6 @@
         <label for="stock" class="form-label">Stock</label>
         <input type="number" class="form-control" id="stock" name="stock" value="{{ product.stock }}" required>
     </div>
-    <button type="submit" class="btn btn-primary">Update Product</button>
+    <button type="submit" class="btn btn-primary">Cập nhật</button>
 </form>
 {% endblock %}
