--- a/templates/admin/products.html
+++ b/templates/admin/products.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Manage Products</h2>
-<a href="{{ url_for('admin_new_product') }}" class="btn btn-success mb-3">Add New Product</a>
+<h2>Quản lý sản phẩm</h2>
+<a href="{{ url_for('admin_new_product') }}" class="btn btn-success mb-3">Thêm sản phẩm</a>
 <div class="table-responsive">
     <table class="table">
         <thead>
@@ -22,8 +22,8 @@
                 <td>{{ product.category.name }}</td>
                 <td>{{ product.stock }}</td>
                 <td>
-                    <a href="{{ url_for('admin_edit_product', product_id=product.id) }}" class="btn btn-primary btn-sm">Edit</a>
-                    <a href="{{ url_for('admin_delete_product_confirm', product_id=product.id) }}" class="btn btn-danger">Delete</a>
+                    <a href="{{ url_for('admin_edit_product', product_id=product.id) }}" class="btn btn-primary btn-sm">Sửa</a>
+                    <a href="{{ url_for('admin_delete_product_confirm', product_id=product.id) }}" class="btn btn-danger">Xóa</a>
                 </td>
             </tr>
             {% endfor %}
