--- a/templates/cart.html
+++ b/templates/cart.html
@@ -36,7 +36,7 @@
                         <td>
                             <a href="{{ url_for('remove_from_cart', item_id=item.id) }}" 
                                class="btn btn-sm btn-danger">
-                                <i class="fas fa-trash">Xóa</i>
+                                <i class="fas fa-trash"></i>
                             </a>
                         </td>
                     </tr>
